<resources>
    <string name="action_delete">Delete</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_reminders_option">Reminders</string>
    <string name="navigation_drawer_settings_option">Settings</string>
    <string name="navigation_drawer_rate_option">Rate</string>
    <string name="navigation_drawer_about_option">About</string>
    <string name="navigation_drawer_feedback_option">Feedback</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_theme_chooser">Change Theme</string>
    <string-array name="pref_theme_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>Theme.AppCompat.Light.DarkActionBar</item>
        <item>Theme.AppCompat.DayNight.DarkActionBar</item>

    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="app_name">Remind Me</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="titleimg">titleImg</string>
    <string name="title">Title</string>
    <string name="alarmImg">alarmImg</string>
    <string name="alarm">Alarm</string>
    <string name="dateText">Date</string>
    <string name="descriptionText">Description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_reminder">New Reminder</string>
    <string name="app_title">Remind Me</string>
    <string name="logo">logo</string>
    <string name="reminderCode">TextView</string>
    <string name="title_hint">Title</string>
    <string name="dateCode">Date</string>
    <string name="timeCode">Time</string>
    <string name="listviewimg">listViewImg</string>
    <string name="titleInputNullMessage">Field can not be empty</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="drawerGroupTitle">Info</string>
    <string name="listimg">listImg</string>

    <string name="updated_reminder">Reminder Updated</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="time_hint">Time</string>
    <string name="date_hint">Date</string>
    <string name="titleError">Title cannot be empty</string>
    <string name="description_hint">Description</string>
    <string name="concatDescription">…</string>
    <string name="empty_recyclerlist">No Reminders!</string>
    <string name="button_edit">Edit</string>
    <string name="title_view_reminder">View Reminder</string>
    <string name="title_edit_reminder">Edit Reminder</string>
    <string name="confirm_delete">CONFIRM DELETE</string>
    <string name="notification_checkbox">Notification</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_title">Settings</string>

</resources>
