<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editDialog"
    style="@style/RemindMe.Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditReminder">

    <!--<androidx.constraintlayout.widget.ConstraintLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/editAppBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar_fragment"
            style="@style/Dialog.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <!--Title-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInput"
        style="@style/RemindMe.TextInputEditText.Filledbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/title_hint"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAppBarLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/timeDateLand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInput">

        <!--Time-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeInput"
            style="@style/RemindMe.TextInputEditText.Filledbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:hint="@string/time_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_access_time_black_24dp"
                android:drawablePadding="4dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Date-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInput"
            style="@style/RemindMe.TextInputEditText.Filledbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-14dp"
            android:layout_weight="1"
            android:hint="@string/date_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_today_black_24dp"
                android:drawablePadding="4dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!--Description-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeDateLand">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descInput"
            style="@style/RemindMe.TextInputEditText.Filledbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description_hint"
            app:counterEnabled="true"
            app:counterMaxLength="300">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="start"
                android:inputType="textMultiLine|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.core.widget.NestedScrollView>

    <!--Save/Cancel Buttons-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/Widget.RemindMe.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="328dp"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nestedScrollView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Widget.RemindMe.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/button_cancel"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>
