<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:background="?android:attr/selectableItemBackground"
    android:layout_marginBottom="-3dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/listImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/listimg"
                android:src="@drawable/ic_description_black_24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="right|center_vertical"
                android:layout_alignBaseline="@+id/listImg" />

            <TextView
                android:id="@+id/titleCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleCode"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/listImg"
                android:layout_alignParentLeft="false"
                android:layout_alignParentBottom="false"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignTop="@+id/listImg"
                android:layout_toRightOf="@+id/listImg"
                android:layout_toLeftOf="@+id/checkBox" />

            <TextView
                android:id="@+id/dateCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateCode"
                android:layout_alignBottom="@+id/listImg"
                android:layout_toRightOf="@+id/listImg"
                android:layout_toEndOf="@+id/listImg"
                android:layout_above="@+id/titleCode" />

            <TextView
                android:id="@+id/timeCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeCode"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_alignTop="@+id/dateCode"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>
