<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jn769.remindme.EditReminder"
    tools:showIn="@layout/activity_edit_reminder">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/titleRow">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:src="@drawable/ic_title_black_24dp"
                    android:contentDescription="@string/titleimg"
                    android:layout_gravity="left|center_vertical" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/title"
                    android:id="@+id/textView"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp" />
            </FrameLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleEditText"
                android:inputType="textCapSentences" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeRow"
            android:weightSum="1"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/titleRow">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/ic_alarm_add_black_24dp"
                    android:contentDescription="@string/alarmImg"
                    android:layout_gravity="left|center_vertical" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alarm"
                    android:id="@+id/textView3"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="16sp" />
            </FrameLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/timeEditText"
                android:focusable="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateRow"
            android:weightSum="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/timeRow">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:src="@drawable/ic_today_black_24dp"
                    android:contentDescription="@string/alarmImg"
                    android:layout_gravity="left|center_vertical" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dateText"
                    android:id="@+id/textView4"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="16sp" />
            </FrameLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/dateEditText"
                android:focusable="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionRow"
            android:weightSum="1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/dateRow">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:src="@drawable/ic_description_black_24dp"
                    android:contentDescription="@string/alarmImg"
                    android:layout_gravity="left|center_vertical" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/descriptionText"
                    android:id="@+id/textView5"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="16sp" />
            </FrameLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:ems="10"
                android:id="@+id/descEditText" />
        </TableRow>


    </RelativeLayout>

</ScrollView>
